<resources>
    <string name="app_name">LaCasaNostra</string>
    <string name="navigation_drawer_open" />
    <string name="navigation_drawer_close" />
    <string name="bienvenido_a_la_casa_nostra">Bienvenido A La Casa Nostra</string>
    <string name="carta">Carta</string>
    <string name="logo_de_la_aplicai_n">Logo de la aplicación</string>
    <string name="pulse_el_bot_n_para_ir_directo_a_la_carta">Pulse el botón para ir directo a la carta</string>
    <string name="home">Home</string>
    <string name="acceder">Acceder</string>
    <string name="cambio_de_idioma">Idioma</string>
    <string name="configuracion">Configuración</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="pagina_web">Pagina web</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="no_tienes_cuenta_reg_strate_aqu">No tienes cuenta? Regístrate aquí!</string>
    <string name="correo_electronico">Correo Electronico</string>
    <string name="Registrar">Registrar</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellido</string>
    <string name="reserva">Reserva</string>
    <string name="escribe_la_cantidad_de_comersales">Introduce la cantidad de comensales</string>
    <string name="inicio_session">Debes de iniciar sesion</string>
    <string name="reservaFinal">Has realizado una reserva en La Casa Nostra</string>
    <string name="fecha">Seleccione Fecha</string>
    <string name="fechaBtn">Fecha</string>
    <string name="hora">Seleccione Hora</string>
    <string name="horaBtn">Hora</string>
    <string name="guardar">Guardar</string>
    <string name="lista_reservas">Reservas Activas</string>
    <string name="login">Has iniciado sesión!!</string>
    <string name="comensales">Comensales</string>
    <string name="promociones">Promociones</string>
    <string name="seleccionar">Selección</string>
    <string name="admin">Administrador</string>
    <string name="perfil">Perfil</string>
    <string name="configuraci_n">Configuración</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="avisoInicio">Ya estas con una sesion activa</string>
    <string name="contrase_a_actual">Contraseña Actual</string>
    <string name="contrase_a_nueva">Contraseña Nueva</string>
    <string name="editar">Editar</string>
    <string name="cambiado">Usuario actualizado</string>
    <string name="contraseñaNo">La contraseña actual no coincide con la anterior.</string>
    <string name="noadmin">Debes de ser admin</string>
    <string name="nombre_apellido">Escribe nombre y apellido</string>
    <string name="editar_perefil">Ya puedes editar tu perfil</string>
    <string name="reservas_antiguas">Lista Reservas</string>
    <string name="ingredientes">Ingredientes</string>
    <string name="calorias">Calorias</string>
    <string name="precio">Precio</string>
    <string name="a_adir_plato">Añadir Categoria</string>
    <string name="descripcion">Descripcion</string>
    <string name="modificar_plato">Modificar Categoria</string>
    <string name="elige_el_plato">Elige la categoria</string>
    <string name="selecciona_imagen">Selecciona Imagen</string>
    <string name="indica_el_nuevo_nombre">Indica el nuevo nombre</string>
    <string name="indica_la_nueva_descripcion">Indica la nueva descripcion</string>
    <string name="modificar">MODIFICAR</string>
    <string name="productos">Productos</string>
    <string name="modificar_producto">Modificar Producto</string>
    <string name="platos">Categoria</string>
    <string name="a_adir_producto">Añadir Producto</string>
    <string name="lista_reservas_lista">Lista Reservas</string>
    <string name="necesario_escribir">Se requiere un correo electronico</string>
    <string name="introduce_nombre">Introduce el nombre</string>
    <string name="introduce_el_precio">Introduce el Precio</string>
    <string name="introduce_los_ingredientes">Introduce los ingredientes</string>
    <string name="indique_el_plato">Indique la categoria</string>
    <string name="introduce_las_calorias">Introduce las calorias</string>
    <string name="seleccione_un_producto">Seleccione un producto</string>
    <string name="eliminar_producto">Eliminar Producto</string>
    <string name="eliminar_plato">Eliminar Categoria</string>
    <string name="numero_de_comensales">Numero de comensales</string>
    <string name="eliminar_tipo">¿Deseas eliminar el tipo?</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="hascancelar">Has cancelado</string>
    <string name="eliminado_prducto">Producto eliminado</string>
    <string name="eliminado_tipo">Tipo eliminado</string>
    <string name="eliminar_producto_delete">¿Deseas eliminar el producto?</string>
    <string name="terminos_y_condiciones">Términos y Condiciones</string>

    <string name="texto">
    <![CDATA[
       Términos y Condiciones de "La Casa Nostra"\n\n

        Bienvenido a "La Casa Nostra", una aplicación móvil para Android que te permite acceder a la carta de nuestro restaurante, realizar reservas, obtener promociones y más. Al utilizar nuestra aplicación, aceptas los siguientes términos y condiciones:\n\n

        Propiedad de la aplicación: \n\n
        "La Casa Nostra" es propiedad de Cristobal Bernal, y se proporciona como una herramienta para facilitar la interacción con nuestro restaurante. Nos reservamos el derecho de actualizar o cambiar la aplicación en cualquier momento.\n\n

        Uso de la aplicación: \n\n
        El uso de "La Casa Nostra" es gratuito, pero al usar la aplicación aceptas que no la utilizarás para ningún propósito ilegal o fraudulento. También aceptas que no intentarás acceder a áreas protegidas de la aplicación ni a información confidencial sin nuestra autorización.\n\n

        Registro de cuenta: \n\n
        Para acceder a ciertas funciones de "La Casa Nostra", puedes necesitar registrarte para crear una cuenta de usuario. Al hacerlo, aceptas proporcionar información precisa y completa. Eres responsable de proteger la confidencialidad de tus credenciales de inicio de sesión y de notificarnos de inmediato si sospechas que alguien ha utilizado tu cuenta sin autorización. \n\n

        Privacidad: \n\n
        Respetamos tu privacidad y estamos comprometidos con la protección de tus datos personales. Por favor, consulta nuestra Política de Privacidad para obtener más información sobre cómo recopilamos, utilizamos y protegemos tus datos. \n\n

        Promociones: \n\n
        De vez en cuando, podemos ofrecer promociones exclusivas a través de "La Casa Nostra". Las promociones estarán sujetas a términos y condiciones adicionales que se proporcionarán en el momento de la oferta.\n\n

        Responsabilidad: \n\n
        "La Casa Nostra" se proporciona "tal cual", sin garantía de ningún tipo. No nos hacemos responsables de ninguna pérdida o daño directo o indirecto que pueda resultar del uso de la aplicación. \n\n

        Cambios en los términos y condiciones: \n\n
        Nos reservamos el derecho de actualizar o cambiar estos Términos y Condiciones en cualquier momento. Cualquier cambio se publicará en esta página. El uso continuado de "La Casa Nostra" después de cualquier cambio constituye tu aceptación de los nuevos términos y condiciones. \n\n

        Al utilizar "La Casa Nostra", aceptas estos Términos y Condiciones. Si tienes alguna pregunta o inquietud, no dudes en ponerte en contacto con nosotros. Gracias por usar nuestra aplicación.
    ]]>
</string>
    <string name="maximo">Maximo 15 personas, LLAME</string>
    <string name="anadido">Se ha añadido correctamente</string>
    <string name="categoria">Categoria modificado</string>
    <string name="producto">Producto modificado</string>
    <string name="registrar" >Te has registrado correctamente</string>
    <string name="no_has_iniciado" >No has inicion sesión</string>
    <string name="obtener">Obtener</string>
    <string name="cambiar">Cambiar</string>
    <string name="cambio_de_ip">Cambio de IP</string>
    <string name="ip">IP</string>
    Maximo 15 personas, LLAME

</resources>