<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:checked="false"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/home" />

        <item
            android:id="@+id/carta"
            android:icon="@drawable/ic_menu_menu"
            android:checked="false"
            android:title="@string/carta"
           />

        <item
            android:id="@+id/acceder"
            android:checked="false"
            android:icon="@drawable/ic_menu_people"
            android:title="@string/acceder"
            />
    </group>
</menu>
