<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/a_adir_producto"
        android:textSize="25sp"
        android:paddingTop="10dp"
        android:textAlignment="center"
        android:textStyle="bold"/>


    <ImageView
        android:id="@+id/image"
        android:layout_width="120dp"
        android:layout_marginTop="15dp"
        android:layout_height="120dp"
        android:src="@drawable/fotopredeterminada"
        android:padding="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:id="@+id/textview1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/introduce_nombre" />

        <TextView
            android:id="@+id/textview2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:text="@string/introduce_el_precio" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <EditText
            android:id="@+id/name_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:hint="@string/nombre" />

        <EditText
            android:id="@+id/price_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:inputType="numberDecimal"
            android:hint="@string/precio" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/introduce_los_ingredientes" />

        <EditText
            android:id="@+id/edittext1"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:layout_height="wrap_content"
            android:hint="@string/ingredientes" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/indique_el_plato" />

        <Spinner
            android:id="@+id/spinner1"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>