<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/modificar_plato"
            android:textSize="35sp"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/modificarImagen"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:src="@drawable/plato"
            android:focusable="true" />
        <android.widget.EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/nombre"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:autofillHints="" />
        <android.widget.EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:hint="@string/descripcion"
            android:textColorHint="@color/black"
            android:autofillHints="" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@color/botones"
            android:text="@string/guardar" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>