<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!-- Título -->
    <TextView
        android:id="@+id/tv_settings_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/configuraci_n"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <!-- TextView con flecha hacia la derecha -->
    <TextView
        android:id="@+id/tv_settings_option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_settings_title"
        android:layout_centerInParent="true"
        android:clickable="true"
        android:drawablePadding="8dp"
        android:focusable="true"
        android:padding="16dp"
        android:paddingStart="35dp"
        android:text="@string/perfil"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingEnd="35dp"
        app:drawableEndCompat="@drawable/baseline_arrow_forward_ios_24"
        app:drawableStartCompat="@drawable/ic_menu_people"
        tools:ignore="RtlSymmetry" />


    <TextView
        android:id="@+id/admin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_settings_option"
        android:layout_centerInParent="true"
        android:clickable="true"
        android:drawablePadding="8dp"
        android:focusable="true"
        android:padding="16dp"
        android:paddingStart="35dp"
        android:text="@string/admin"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingEnd="35dp"
        app:drawableEndCompat="@drawable/baseline_arrow_forward_ios_24"
        app:drawableStartCompat="@drawable/baseline_manage_accounts_24"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/cerrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/admin"
        android:layout_centerInParent="true"
        android:clickable="true"
        android:focusable="true"
        android:padding="16dp"
        android:text="@string/cerrar_sesion"
        android:textSize="18sp"
        android:textStyle="bold" />
</RelativeLayout>