<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Título principal -->
    <TextView
        android:id="@+id/main_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/reserva"
        android:textSize="34sp"
        android:textStyle="bold" />

    <!-- Título del primer apartado -->
    <TextView
        android:id="@+id/section_title_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/escribe_la_cantidad_de_comersales"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <!-- EditText del primer apartado -->
    <android.widget.Spinner
        android:id="@+id/cantidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        android:textStyle="bold" />

    <!-- Botones del primer apartado -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/fecha"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/bfecha"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="@string/fecha" />

        <EditText
            android:id="@+id/efecha"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textStyle="bold" />

    </LinearLayout>

    <!-- Título del segundo apartado -->
    <TextView
        android:id="@+id/section_title_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/hora"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <!-- EditText del segundo apartado -->

    <!-- Botones del segundo apartado -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/bhora"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="@string/hora" />

        <EditText
            android:id="@+id/ehora"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textStyle="bold" />



    </LinearLayout>

    <!-- Botón de Guardar -->
    <Button
        android:id="@+id/guardar"
        android:text="@string/reserva"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"/>
    <Button
        android:id="@+id/reservasActivas"
        android:text="@string/lista_reservas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"/>
    <Button
        android:id="@+id/reservasAntiguas"
        android:text="@string/reservas_antiguas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"/>


</LinearLayout>